--- a/slides/slides_42.Rmd
+++ b/slides/slides_42.Rmd
@@ -7,6 +7,7 @@ author:
 output:
   xaringan::moon_reader:
     css: [default, robot, robot-fonts]
+    self_contained: true
     nature:
       highlightStyle: atelier-lakeside-light
       highlightLines: yes
