--- a/slides/slides_11.Rmd
+++ b/slides/slides_11.Rmd
@@ -5,7 +5,7 @@ subtitle: "1.1 Getting started"
 output: 
   xaringan::moon_reader:
     self_contained: true
-    css: [default, uoc_meth.css]
+    css: [default, uchicago_pol_meth.css]
     nature:
       highlightLines: true
 
