--- a/slides/slides_21.Rmd
+++ b/slides/slides_21.Rmd
@@ -5,7 +5,7 @@ subtitle: "2.1 Data wrangling 1"
 output: 
   xaringan::moon_reader:
     self_contained: true
-    css: [default, uoc_meth.css]
+    css: [default, uchicago_pol_meth.css]
     nature:
       highlightLines: true
 
