more css formatting

--- a/slides/slides_32.Rmd
+++ b/slides/slides_32.Rmd
@@ -10,6 +10,7 @@ output:
     css: [default, uchicago_pol_meth.css]
     nature:
       highlightLines: true
+      countIncrementalSlides: no
 ---
 
 exclude: true
