--- a/slides/slides_31.Rmd
+++ b/slides/slides_31.Rmd
@@ -10,6 +10,7 @@ output:
     css: [default, uchicago_pol_meth.css]
     nature:
       highlightLines: true
+      countIncrementalSlides: no
 ---
 ```{r setup, include=FALSE}
 library(tidyverse)
